--- a/index.html
+++ b/index.html
@@ -2,18 +2,66 @@
 <html lang="pt">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- ESSA LINHA DEIXA RESPONSIVO -->
   <title>Reparação de Joysticks</title>
   <style>
-    body { font-family: Arial; background: #e8ffe8; padding: 20px; }
-    form { background: white; padding: 20px; border-radius: 10px; max-width: 400px; margin: auto; }
-    input, textarea, button { width: 100%; padding: 10px; margin: 5px 0; }
-    button { background: green; color: white; border: none; cursor: pointer; font-weight: bold; }
+    body { 
+      font-family: Arial, sans-serif; 
+      background: #e8ffe8; 
+      margin: 0; 
+      padding: 15px; 
+    }
+
+    h1 { 
+      text-align: center; 
+      color: #006600; 
+      font-size: 1.5em;
+    }
+
+    form { 
+      background: white; 
+      padding: 20px; 
+      border-radius: 10px; 
+      max-width: 100%; 
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1); 
+    }
+
+    input, textarea, button { 
+      width: 100%; 
+      padding: 12px; 
+      margin: 8px 0; 
+      font-size: 1em; 
+      border: 1px solid #ccc; 
+      border-radius: 6px; 
+      box-sizing: border-box;
+    }
+
+    textarea { 
+      min-height: 100px; 
+      resize: vertical; 
+    }
+
+    button { 
+      background: green; 
+      color: white; 
+      border: none; 
+      cursor: pointer; 
+      font-size: 1.1em; 
+      font-weight: bold;
+    }
+
     button:hover { background: darkgreen; }
-    h1 { text-align: center; color: #006600; }
+
+    /* Responsividade */
+    @media (max-width: 600px) {
+      body { padding: 10px; }
+      form { padding: 15px; }
+      h1 { font-size: 1.3em; }
+    }
   </style>
 </head>
 <body>
-  <h1>Pedido de Reparação de Joystick ou uma consola</h1>
+  <h1>Pedido de Reparação de Joysticks</h1>
   
   <form id="form">
     <input type="text" id="nome" placeholder="Seu Nome" required>
@@ -23,10 +71,10 @@
   </form>
 
   <script>
-    // 👉 COLE AQUI A URL DO SEU Google Apps Script (para salvar na planilha)
-    const sheetURL = "https://script.google.com/macros/s/AKfycbyN5GbVF4xpYTNSKV9mtVjWCDT_c4K4kbIlBCBhDEDwG8CqwpXOJXzudRbNxoCVmVS0/exec"; 
+    // 👉 URL do Google Apps Script (planilha)
+    const sheetURL = "https://script.google.com/macros/s/AKfycbyN5GbVF4xpYTNSKV9mtVjWCDT_c4K4kbIlBCBhDEDwG8CqwpXOJXzudRbNxoCVmVS0/exec "; 
     
-    // 👉 COLOQUE AQUI O SEU NÚMERO WHATSAPP COM CÓDIGO (+258 para Moçambique)
+    // 👉 Seu número WhatsApp (+258 para Moçambique)
     const numeroWhatsApp = "258843709289"; 
 
     document.getElementById("form").addEventListener("submit", function(e) {
